# QvPlugin-Command

./: .gitmodules  CMakeLists.txt  CommandPlugin.cpp  CommandPlugin.hpp
.github/workflows/: build-simpleplugin-qt6.yml  build-simpleplugin.yml
core/: CommandConfig.hpp  EventHandler.cpp  EventHandler.hpp
ui/: CommandPluginSettings.cpp  CommandPluginSettings.hpp  CommandPluginSettings.ui  GUIInterface.hpp
